--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
   android:layout_height="match_parent"
   tools:context="edu.cnm.deepdive.simpleroomapp.MainActivity">
 
-  <ListView
+  <android.support.v7.widget.RecyclerView
     android:id="@+id/notes_list"
     android:layout_width="match_parent"
     android:layout_height="0dp"
